5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4369/executions/1633_2918.log
== TEST (2019-04-02 18:29:34) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
d = i - 20/100
print(round(d, 2))
-- OUTPUT:
28.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:31:46) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = int(input("Digite quantidade de ingressos"))
d = i - 20
pp = i - (i*(d/100))
print(round(d, 2))
-- OUTPUT:
8.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:32:11) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = int(input("Digite quantidade de ingressos"))
d = i*100 - 20
pp = i - (i*(d/100))
print(round(d, 2))
-- OUTPUT:
2830.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:32:48) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = int(input("Digite quantidade de ingressos: "))
d = i*20/100
pp = i - (i*(d/100))
print(round(d, 2))
-- OUTPUT:
5.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:33:10) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = int(input("Digite quantidade de ingressos: "))
d = i*20/100
pp = (i - (i*(d/100))
print(round(d, 2))
-- ERROR:
File "XXXX", line 5
    print(round(d, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:33:25) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = int(input("Digite quantidade de ingressos: "))
d = i*20/100
pp = (i - (i*(d/100))
print(round(pp, 2))
-- ERROR:
File "XXXX", line 5
    print(round(pp, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:33:58) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = int(input("Digite quantidade de ingressos: "))
d = i*20/100
pp = (i - (i*(d/100))
print(round(pp, 2))
-- ERROR:
File "XXXX", line 5
    print(round(pp, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:34:14) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = int(input("Digite quantidade de ingressos: "))
d = i*20/100
pp = (i - (i*(d/100))
print(round(pp. 2))
-- ERROR:
File "XXXX", line 5
    print(round(pp. 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:34:26) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = int(input("Digite quantidade de ingressos: "))
d = i*20/100
pp = (i - (i*(d/100))
print(round(pp, 2))
-- ERROR:
File "XXXX", line 5
    print(round(pp, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:34:59) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = int(input("Digite quantidade de ingressos: "))
d = i*20/100
pp = i - (i*(d/100)
print(round(pp, 2))
-- ERROR:
File "XXXX", line 5
    print(round(pp, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:35:19) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = int(input("Digite quantidade de ingressos: "))
d = i*20/100
pp = i - (i*(d/100)
print(round(pp, 2))
-- EXECUTION TIME:
0.204899
-- ERROR:
  File "/home/codebench/codes/1633/2918/main.py", line 5
    print(round(pp, 2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:35:20) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = int(input("Digite quantidade de ingressos: "))
d = i*20/100
pp = i - (i*(d/100)
print(round(pp, 2))
-- ERROR:
File "XXXX", line 5
    print(round(pp, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:35:39) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = int(input("Digite quantidade de ingressos: "))
d = i*20/100
pp = i - (i*(d/100)
print(pp)
-- ERROR:
File "XXXX", line 5
    print(pp)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:36:02) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = int(input("Digite quantidade de ingressos: "))
d = i*20/100
pp = i - (i*(d/100)
print(round(pp, 2))
-- ERROR:
File "XXXX", line 5
    print(round(pp, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:36:58) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = int(input("Digite quantidade de ingressos: "))
d = i*20/100
pp = i
print(round(pp, 2))
-- OUTPUT:
28.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:37:40) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = int(input("Digite quantidade de ingressos: "))
d = i*20/100
pp = (i - (i*(d)))
print(round(pp, 2))
-- OUTPUT:
-133.95
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:38:00) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = int(input("Digite quantidade de ingressos: "))
d = i*20/100
pp = (i - (i*(d/100)))
print(round(pp, 2))
-- OUTPUT:
26.88
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:38:18) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = int(input("Digite quantidade de ingressos: "))
d = i*20
pp = (i - (i*(d/100)))
print(round(pp, 2))
-- OUTPUT:
-133.95
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:38:51) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = int(input("Digite quantidade de ingressos: "))
d = i - i*(20/100)
pp = (i - (i*(d/100)))
print(round(pp, 2))
-- OUTPUT:
22.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:39:26) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = int(input("Digite quantidade de ingressos: "))
d = i - 20/100
pp = (i - (i*(d/100)))
print(round(pp, 2))
-- OUTPUT:
20.43
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:40:02) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = int(input("Digite quantidade de ingressos: "))
d = 20
pp = (i - (i*(d/100)))
print(round(pp, 2))
-- OUTPUT:
22.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:40:11) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = int(input("Digite quantidade de ingressos: "))
d = 20
pp = (i - (i*(d/100)))
print(round(pp, 2))
-- EXECUTION TIME:
0.201371
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
22.8
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
21.56
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
33.94
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:40:33) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = int(input("Digite quantidade de ingressos: "))
d = i*(20/100)
pp = (i - (i*(d/100)))
print(round(pp, 2))
-- EXECUTION TIME:
0.113197
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
26.88
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
25.5
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
38.82
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:40:36) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = int(input("Digite quantidade de ingressos: "))
d = i*(20/100)
pp = (i - (i*(d/100)))
print(round(pp, 2))
-- OUTPUT:
26.88
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:41:13) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = float(input("Digite quantidade de ingressos: "))
d = i*(20/100)
pp = (i - (i*(d/100)))
print(round(pp, 2))
-- OUTPUT:
26.88
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:42:16) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = float(input("Digite quantidade de ingressos: "))
d = i*(20/100)
pp = (i - (i*(d/100)))
print(round(pp, 2))
-- OUTPUT:
26.88
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:42:22) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = float(input("Digite quantidade de ingressos: "))
d = i*20
pp = (i - (i*(d/100)))
print(round(pp, 2))
-- OUTPUT:
-133.95
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:42:51) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = float(input("Digite quantidade de ingressos: "))
d = (i*(20/100))
pp = (i - (i*(d/100)))
print(round(pp, 2))
-- OUTPUT:
26.88
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:43:19) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = float(input("Digite quantidade de ingressos: "))
d = (i*(20/100)) * qi
pp = (i - (i*(d/100)))
print(round(pp, 2))
-- OUTPUT:
20.38
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:27) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = float(input("Digite quantidade de ingressos: "))
d = (i*(20/100)) * qi
pp = (i - (i*(d/100)))
print(round(pp, 2))
-- EXECUTION TIME:
0.194411
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
20.38
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
15.33
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
31.62
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:43:56) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = float(input("Digite quantidade de ingressos: "))
d = i*qi
pp = (i - (i*(d/100)))
print(round(pp, 2))
-- OUTPUT:
-12.11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:44:19) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = float(input("Digite quantidade de ingressos: "))
d = i*qi*20
pp = (i - (i*(d/100)))
print(round(pp, 2))
-- OUTPUT:
-783.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:44:29) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = float(input("Digite quantidade de ingressos: "))
d = i*qi*20/100
pp = (i - (i*(d/100)))
print(round(pp, 2))
-- OUTPUT:
20.38
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:44:37) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = float(input("Digite quantidade de ingressos: "))
d = i*qi*20/100
pp = (i - (i*(d/100)))
print(round(pp, 2))
-- OUTPUT:
20.38
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:45:08) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = float(input("Digite quantidade de ingressos: "))
d = i-(20/100)
pp = (i - (i*(d/100)))
print(round(pp, 2))
-- OUTPUT:
20.43
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:45:24) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = float(input("Digite quantidade de ingressos: "))
d = i-(20/100)
pp = (i - (i*(d/100)))
print(round(pp, 2))
-- EXECUTION TIME:
0.128775
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
20.43
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
19.74
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
24.51
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:45:37) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = float(input("Digite quantidade de ingressos: "))
d = i-(20/100) * qi
pp = (i - (i*(d/100)))
print(round(pp, 2))
-- OUTPUT:
20.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:46:05) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = float(input("Digite quantidade de ingressos: "))
d = 20
pp = (i - (i*(d/100)))
print(round(pp, 2))
-- OUTPUT:
22.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:46:16) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = float(input("Digite quantidade de ingressos: "))
d = 20
pp = (i - (i*(d/100)))
print(round(pp, 2))
-- EXECUTION TIME:
0.221381
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
22.8
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
21.56
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
33.94
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:46:53) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = float(input("Digite quantidade de ingressos: "))
d = (i*qi)*(20/100)
pp = (i - (i*(d/100)))
print(round(pp, 2))
-- EXECUTION TIME:
0.208173
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
20.38
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
15.33
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
31.62
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:46:56) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = float(input("Digite quantidade de ingressos: "))
d = (i*qi)*(20/100)
pp = (i - (i*(d/100)))
print(round(pp, 2))
-- OUTPUT:
20.38
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:47:41) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = float(input("Digite quantidade de ingressos: "))
d = (i*qi)*(20/100)
pp = (i - (i*(d/100)))
print(round(pp, 2))
-- EXECUTION TIME:
0.214294
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
20.38
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
15.33
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
31.62
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:48:07) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = float(input("Digite quantidade de ingressos: "))
d = i - (20/100)
pp = (i - (i*(d/100)))
print(round(pp, 2))
-- OUTPUT:
20.43
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:48:15) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = float(input("Digite quantidade de ingressos: "))
d = i - (20/100)
pp = (i - (i*(d/100)))
print(round(pp, 2))
-- OUTPUT:
20.43
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:48:32) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = float(input("Digite quantidade de ingressos: "))
d = i - (20/100)
pp = (i - (i*(20/100)))
print(round(pp, 2))
-- EXECUTION TIME:
0.171212
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
22.8
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
21.56
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
33.94
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:48:33) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = float(input("Digite quantidade de ingressos: "))
d = i - (20/100)
pp = (i - (i*(20/100)))
print(round(pp, 2))
-- OUTPUT:
22.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:49:04) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = float(input("Digite quantidade de ingressos: "))
d = 20
pp = (i - (i*(20/100)))
print(round(pp, 2))
-- EXECUTION TIME:
0.146691
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
Digite valor do ingresso: Digite quantidade de ingressos: 22.8
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
Digite valor do ingresso: Digite quantidade de ingressos: 21.56
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
Digite valor do ingresso: Digite quantidade de ingressos: 33.94
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:49:06) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = float(input("Digite quantidade de ingressos: "))
d = 20
pp = (i - (i*(20/100)))
print(round(pp, 2))
-- EXECUTION TIME:
0.141807
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
22.8
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
21.56
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
33.94
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:49:39) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = float(input("Digite quantidade de ingressos: "))
d = i - i*(20/100)
pp = (i - (i*(d/100)))
print(round(pp, 2))
-- OUTPUT:
22.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:49:47) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = float(input("Digite quantidade de ingressos: "))
d = i - i*(20/100)
pp = (i - (i*(d/100)))
print(round(pp, 2))
-- EXECUTION TIME:
0.127499
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
22.0
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
21.14
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
28.02
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:49:56) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = float(input("Digite quantidade de ingressos: "))
d = i - i*(20/100)
pp = (i - (i*(d/10)))
print(round(pp, 2))
-- EXECUTION TIME:
0.110768
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
-36.48
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
-31.15
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
-101.54
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:49:58) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = float(input("Digite quantidade de ingressos: "))
d = i - i*(20/100)
pp = (i - (i*(d/10)))
print(round(pp, 2))
-- EXECUTION TIME:
0.127731
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
-36.48
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
-31.15
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
-101.54
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:49:59) 
-- CODE:
i = float(input("Digite valor do ingresso: "))
qi = float(input("Digite quantidade de ingressos: "))
d = i - i*(20/100)
pp = (i - (i*(d/10)))
print(round(pp, 2))
-- OUTPUT:
-36.48
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
